@@ -1,5 +1,7 @@
 2006-02-22  Tim Waugh  <twaugh@redhat.com>
 
+	* cupsconnection.c: More consistent error handling.
+
 	* cupsconnection.c (Connection_putFile): Fixed ipp_t leak.
 	(set_ipp_error): "i" -> "(is)" for IPPError.
 
